--- a/public_html/ConstantStyle.css
+++ b/public_html/ConstantStyle.css
@@ -90,3 +90,21 @@ Body{
 
 
 .dropdown:hover .dropbtn {background-color: activeborder;}
+@keyframes smoke {
+            0% {
+                opacity: 0;
+                transform: translateY(0);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(-20px);
+            }
+        }
+        .smoke-text {
+            text-align: center;
+            font-size: 2em;
+            font-family: 'Cinzel', serif;
+            color: #fefeff;
+            animation: smoke 3s ease infinite alternate;
+        }
+    </style>
